fixed align service and repair

--- a/Hjem.css
+++ b/Hjem.css
@@ -116,7 +116,7 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -25px;
+    margin-top: -32px;
     margin-right: -97px;
     margin-left: 295px;
   }
